--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<h1>COOL Generator</h1>
 	<input class="color1" type="color" name="color1" value="#00ff00">
 	<input class="color2" type="color" name="color2" value="#00ffff">
-	<h2>Current CSS Background</h2>
+	<h2>otro CSS Background</h2>
 	<h3></h3>
 	<button><strong>Random Color</strong></button>
 	<script type="text/javascript" src="script.js"></script>
